--- a/fileaccess/build.gradle
+++ b/fileaccess/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 19
     buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "io.github.thunderbots.fileaccess"
-        minSdkVersion 19
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion 19c
         versionCode 1
         versionName "1.0"
     }
