--- a/fileaccess/build.gradle
+++ b/fileaccess/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "io.github.thunderbots.fileaccess"
         minSdkVersion 16
-        targetSdkVersion 19c
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
