--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           package="com.qualcomm.ftcrobotcontroller"
@@ -41,7 +42,7 @@
     <activity
       android:name=".FtcRobotControllerActivity"
       android:configChanges="orientation|screenSize"
-      android:label="@string/app_name"
+      android:label="@string/app_label"
       android:launchMode="singleTask" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
